unpackaged/main/default/objects/footprint__Footprint_Line_Item__c/footprint__Footprint_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Footprint Field</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Footprint Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>