unpackaged/main/default/objects/footprint__Footprint_Line_Item__c/fields/footprint__Footprint_Line_Item_rt__c.field-meta.xml
<CustomField>
    <fullName>footprint__Footprint_Line_Item_rt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Field usage per Record Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>