unpackaged/main/default/objects/footprint__Footprint_Line_Item__c/fields/footprint__Footprint_Line_Items_APIName__c.field-meta.xml
<CustomField>
    <fullName>footprint__Footprint_Line_Items_APIName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>