unpackaged/main/default/objects/footprint__Footprint_Line_Item__c/fields/footprint__Footprint_Line_Items_Custom__c.field-meta.xml
<CustomField>
    <fullName>footprint__Footprint_Line_Items_Custom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom</label>
    <type>Checkbox</type>
</CustomField>