unpackaged/main/default/objects/footprint__Footprint_Line_Item__c/fields/footprint__Footprint_Line_Items_Populated_On_Perc__c.field-meta.xml
<CustomField>
    <fullName>footprint__Footprint_Line_Items_Populated_On_Perc__c</fullName>
    <formula>IF( footprint__Footprint_Line_Items_Object_Analysis__r.footprint__FootPrint_Records__c &gt;0, footprint__Footprint_Line_Items_Populated_On__c /footprint__Footprint_Line_Items_Object_Analysis__r.footprint__FootPrint_Records__c  ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Populated On (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>