unpackaged/main/default/objects/footprint__Footprint_Line_Item__c/fields/footprint__Footprint_Line_Items_Properties__c.field-meta.xml
<CustomField>
    <fullName>footprint__Footprint_Line_Items_Properties__c</fullName>
    <formula>IF(footprint__Footprint_Line_Items_Custom__c ,  IMAGE('/resource/footprint__CustomIcon', 'Custom',20,70), IMAGE('/resource/footprint__StandardIcon', 'Standard',20,70)) +'   '+ IF(footprint__Footprint_Line_Items_Required__c ,  IMAGE('/resource/footprint__RequiredIcon', 'Required',20,70),'')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Properties</label>
    <type>Text</type>
</CustomField>