unpackaged/main/default/objects/footprint__Footprint_Line_Item__c/fields/footprint__Footprint_Line_Items_RT__c.field-meta.xml
<CustomField>
    <fullName>footprint__Footprint_Line_Items_RT__c</fullName>
    <label>Record Types</label>
    <summaryForeignKey>footprint__Footprint_Line_Item_Detail__c.footprint__Footprint_Line_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>