unpackaged/main/default/objects/footprint__Footprint_Line_Item__c/fields/footprint__footprint_Validation_rules__c.field-meta.xml
<CustomField>
    <fullName>footprint__footprint_Validation_rules__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Validation rules</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>