unpackaged/main/default/objects/footprint__Footprint_Line_Item__c/fields/footprint__Footprint_WorkflowRules__c.field-meta.xml
<CustomField>
    <fullName>footprint__Footprint_WorkflowRules__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Workflow Rules</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>